--- a/440cs_ir1.Rmd
+++ b/440cs_ir1.Rmd
@@ -136,6 +136,8 @@ Through these exploratory data analysis and missing data visualizations, we can 
 
 ### Build Model
 
+In order to address the issues associated with missing data, we built a complete case, and we estimated survival functions using both Cox proportional hazards regression modelling and Kaplan-Meier curves.
+
 ```{r, fig.height= 15, fig.width = 7}
 # select data we want
 # note: selected from fan's slides
@@ -167,23 +169,6 @@ cardio_new = cardio %>%
 ```
 
 ```{r}
-#Kaplan-Meier curves
-
-surv_ob=Surv(time=cardio$DAYS2LKA,event=cardio$DEATH)
-
-#gender
-fit_gender=survfit(surv_ob~GENDER,data=cardio)
-ggsurvfit=(fit_gender,data=cardio,pval=TRUE)
-
-#age
-#note: I think we need to create an indicator var for AGE (i.e. under/over 20yr)
-fit_age=survfit(surv_ob~AGE_G,data=cardio)
-ggsurvfit=(fit_age,data=cardio,pval=TRUE)
-
-#note: need to explore more variables when code is debugged
-```
-
-```{r}
 #complete case model
 
 formula_call = Surv(DAYS2LKA, DEATH) ~ YRCATH_G + AGE_G + GENDER + RACE_G + HXSMOKE + HXCEREB + CHFSEV + HXCOPD + HXDIAB + HXHYL + S3 + LMST + NUMDZV
@@ -191,6 +176,36 @@ formula_call = Surv(DAYS2LKA, DEATH) ~ YRCATH_G + AGE_G + GENDER + RACE_G + HXSM
 fit.coxph <- coxph(formula_call, data = cardio_new)
 
 ggsave("output/cox_graph_complete_case.png", ggforest(fit.coxph, data=cardio_new), device = "png", width = 7, height = 10, units = "in")
+```
+
+The forest plot above illustrates the hazard ratios for different values of the covariates explored as estimated through Cox proportional hazards regression modelling. A hazard ratio >1 implies that individuals with the associated value for the covariate have an increased chance of dying. Intuitively, hazard ratios <1 imply that the individual indicate a decreased risk of dying.
+</br>
+</br>
+In order to run the Cox model, we established that our survival object would measure time with DAYS2LKA as we are working with censored, not interval, data, and we set the event to be 0 if the individual died and 1 if the individual stayed alive. We modelled the survival object using the following covariates: YRCATH_G, AGE_G, GENDER, RACE_G, HXSMOKE, HXCEREB, CHFSEV, HXCOPD, HXDIAB, HXHYL, S3, LMST, NUMDZV.
+</br>
+</br>
+Our forest plot indicates that as an individual's age increases, so does this person's risk of dying. Furthermore, the same trend occurs for white and non-white individuals, where non-white individuals are at higher risk of dying. Moreover, this trend appears in the variable CHFSEV as well, where individuals with a severity of 0 are the least at risk. Interestingly, YRCATH_G has decreasing risk as the group number moves from 1-3, then increases for groups 4-7.
+
+```{r}
+#Kaplan-Meier curves
+
+surv_ob=Surv(time=cardio$DAYS2LKA,event=cardio$DEATH)
+
+#gender
+fit_gender=survfit(surv_ob~GENDER,data=cardio)
+ggsurvplot(fit_gender,data=cardio,pval=TRUE)
+
+#age (low is <40)
+cardio=cardio%>%mutate(age_low=case_when(AGE_G%in%seq(1,4,1)~1,AGE_G%in%seq(4,13,1)~0))
+fit_age=survfit(surv_ob~age_low,data=cardio)
+ggsurvplot(fit_age,data=cardio,pval=TRUE)
+
+#race (white v. non-white)
+cardio=cardio%>%mutate(white=case_when(RACE_G==1~1,RACE_G%in%c(2,3)~0))
+fit_white=survfit(surv_ob~white,data=cardio)
+ggsurvplot(fit_white,data=cardio,pval=TRUE)
+
+#note: can explore more variables when code is debugged (CHFSEV could be good... groups: {CHFSV=0, CHFSV!=0})
 ```
 
 ```{r}
