--- a/440cs_ir1.Rmd
+++ b/440cs_ir1.Rmd
@@ -28,7 +28,6 @@ cardio$DEATH = as.factor(cardio$DEATH)
 cardio$GENDER = as.factor(cardio$GENDER)
 
 
-
 select = dplyr::select
 ```
 
@@ -138,6 +137,7 @@ Through these exploratory data analysis and missing data visualizations, we can 
 
 In order to address the issues associated with missing data, we built a complete case, and we estimated survival functions using both Cox proportional hazards regression modelling and Kaplan-Meier curves.
 
+[TODO: add more variables here to explore]
 ```{r, fig.height= 15, fig.width = 7}
 # select data we want
 # note: selected from fan's slides
@@ -168,6 +168,34 @@ cardio_new = cardio %>%
   select(-WEIGHT_R, -HEIGHT_R, -DPMI)
 ```
 
+
+
+```{r}
+#Kaplan-Meier curves -- tool to decide what to put into the model we use
+
+#gender
+
+fit_gender=survfit(Surv(DAYS2LKA, DEATH) ~ GENDER, data=cardio_new)
+ggsurvplot(fit_gender,data=cardio_new,pval=TRUE)
+
+#age (low is <40)
+cardio_new = cardio_new %>% 
+  mutate(age_low = case_when(AGE_G %in% seq(1,4,1) ~ 1, AGE_G %in% seq(4,13,1) ~ 0))
+
+fit_age=survfit(Surv(DAYS2LKA, DEATH) ~ age_low,data=cardio_new)
+ggsurvplot(fit_age,data=cardio_new,pval=TRUE)
+
+#race (white v. non-white)
+fit_white=survfit(Surv(DAYS2LKA, DEATH) ~ RACE_G, data=cardio_new)
+ggsurvplot(fit_white,data=cardio_new,pval=TRUE)
+
+#note: can explore more variables when code is debugged (CHFSEV could be good... groups: {CHFSV=0, CHFSV!=0})
+
+ggsurvplot(survfit(Surv(DAYS2LKA, DEATH) ~ CHFSEV, data=cardio_new), data=cardio_new, pval=TRUE)
+
+```
+
+
 ```{r}
 #complete case model
 
@@ -184,35 +212,19 @@ The forest plot above illustrates the hazard ratios for different values of the 
 In order to run the Cox model, we established that our survival object would measure time with DAYS2LKA as we are working with censored, not interval, data, and we set the event to be 0 if the individual died and 1 if the individual stayed alive. We modelled the survival object using the following covariates: YRCATH_G, AGE_G, GENDER, RACE_G, HXSMOKE, HXCEREB, CHFSEV, HXCOPD, HXDIAB, HXHYL, S3, LMST, NUMDZV.
 </br>
 </br>
-Our forest plot indicates that as an individual's age increases, so does this person's risk of dying. Furthermore, the same trend occurs for white and non-white individuals, where non-white individuals are at higher risk of dying. Moreover, this trend appears in the variable CHFSEV as well, where individuals with a severity of 0 are the least at risk. Interestingly, YRCATH_G has decreasing risk as the group number moves from 1-3, then increases for groups 4-7.
+Our forest plot indicates that as an individual's age increases so does this person's risk of dying. Furthermore, the same trend occurs for white and non-white individuals, where non-white individuals are at higher risk of dying. Moreover, this trend appears in the variable CHFSEV as well, where individuals with a severity of 0 are the least at risk. Interestingly, YRCATH_G has decreasing risk as the group number moves from 1-3, then increases for groups 4-7.
 
-```{r}
-#Kaplan-Meier curves
 
-surv_ob=Surv(time=cardio$DAYS2LKA,event=cardio$DEATH)
+[TODO: elaborate on age, U-shaped trend, not simply increasing],
 
-#gender
-fit_gender=survfit(surv_ob~GENDER,data=cardio)
-ggsurvplot(fit_gender,data=cardio,pval=TRUE)
+[TODO: use full names, not variable names, and give context to why the relationship do or don't make sense]
 
-#age (low is <40)
-cardio=cardio%>%mutate(age_low=case_when(AGE_G%in%seq(1,4,1)~1,AGE_G%in%seq(4,13,1)~0))
-fit_age=survfit(surv_ob~age_low,data=cardio)
-ggsurvplot(fit_age,data=cardio,pval=TRUE)
-
-#race (white v. non-white)
-cardio=cardio%>%mutate(white=case_when(RACE_G==1~1,RACE_G%in%c(2,3)~0))
-fit_white=survfit(surv_ob~white,data=cardio)
-ggsurvplot(fit_white,data=cardio,pval=TRUE)
-
-#note: can explore more variables when code is debugged (CHFSEV could be good... groups: {CHFSV=0, CHFSV!=0})
-```
+[TODO: justification for why we want to do MICE, why we chose the m we did, etc]
 
 ```{r}
 # use multiple imputation with mice
 #note: this takes a long time to run, so toggle rerunMICE to recalculate
 #think we could make this go faster by parsing every factor as an int before running MICE, then refactoring before running the coxph
-
 
 rerunMICE = FALSE
 
